turn off z-index

--- a/wall.css
+++ b/wall.css
@@ -253,6 +253,7 @@ body {
   }
 }
 
+/*
 .z\:0 { z-index: 0 }
 .z\:1 { z-index: 1 }
 .z\:2 { z-index: 1 }
@@ -263,6 +264,7 @@ body {
 .z\:6 { z-index: 6 }
 .z\:7 { z-index: 7 }
 .z\:8 { z-index: 8 }
+*/
 
 [hidden] {
   display: none;
